--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "antd": "^4.21.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
