--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "echarts": "^5.3.3",
+    "echarts-for-react": "^3.0.2",
     "graphql": "^16.5.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
